--- a/linear-sesh.cabal
+++ b/linear-sesh.cabal
@@ -20,15 +20,35 @@ source-repository head
 
 library
   exposed-modules:
-      Control.Concurrent.Linear
-      Control.Concurrent.MVar.Linear
-      Control.Concurrent.OneShot.Linear
-      Control.Concurrent.Session.Linear
+    Control.Concurrent.Linear
+    Control.Concurrent.MVar.Linear
+    Control.Concurrent.OneShot.Linear
+    Control.Concurrent.Session.Linear
   hs-source-dirs:
-      src
+    src
   build-depends:
-      base        >=4.7 && <5,
-      linear-base >=0.1 && <0.2
-  default-language: Haskell2010
+    base        >=4.7 && <5,
+    linear-base >=0.1 && <0.2
+  default-language:
+    Haskell2010
   default-extensions:
-      LinearTypes
+    LinearTypes
+
+test-suite test-linear-sesh
+  type:
+    exitcode-stdio-1.0
+  main-is:
+    Test.hs
+  other-modules:
+    Test.HUnit.Linear
+  hs-source-dirs:      
+    test
+  build-depends:
+    base        >=4.7 && <5,
+    HUnit       >=1.6 && <2,
+    linear-base >=0.1 && <0.2,
+    linear-sesh
+  default-language:
+    Haskell2010
+  default-extensions:
+    LinearTypes
