--- a/linear-sesh.cabal
+++ b/linear-sesh.cabal
@@ -23,14 +23,15 @@ library
     Control.Concurrent.MVar.Linear
     Control.Concurrent.OneShot.Linear
     Control.Concurrent.Session.Linear
+    Control.Concurrent.Session.Raw.Linear
     Data.Functor.Indexed.Linear
     Control.Monad.Indexed.Linear
   hs-source-dirs:
     src
   build-depends:
-    base        >=4.7 && <5,
-    linear-base >=0.1 && <0.2,
-    indexed     >=0.1 && <0.2
+    base        >=4.7  && <5,
+    linear-base >=0.1  && <0.2,
+    indexed     >=0.1  && <0.2
   default-language:
     Haskell2010
   default-extensions:
