Moved conclusion to its own file, rewrote 'session types in haskell'.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ doc/main.tex
 doc/introduction.tex
 doc/pgv.tex
 doc/sesh.tex
+doc/conclusion.tex
 doc/fig-pgv-to-sesh.tex
 doc/fig-pgv-to-sesh-typing.tex
 doc/fig-sesh-typing.tex
