--- a/priority-sesh.cabal
+++ b/priority-sesh.cabal
@@ -20,12 +20,14 @@ common common-depends
   build-depends:      base        >=4.7 && <5
                     , linear-base >=0.1 && <0.2
   default-language:   Haskell2010
-  default-extensions: LinearTypes
-                    , ImportQualifiedPost
+  default-extensions: ImportQualifiedPost
+                    , LinearTypes
+                    , RebindableSyntax
 
 library
   import:             common-depends
-  exposed-modules:    Control.Concurrent.Linear
+  exposed-modules:    Control.Cancellable.Linear
+                      Control.Concurrent.Linear
                       Control.Concurrent.OneShot.Linear
                       Control.Concurrent.Session.Linear
                       Control.Concurrent.Session.DF.Tree.Linear
@@ -43,7 +45,7 @@ test-suite test-priority-sesh
   other-modules:      Test.HUnit.Linear
                       Test.OneShot
                       Test.Session
-                      Test.Session.Priority
+                      Test.Priority
   hs-source-dirs:     test
   build-depends:      HUnit    >=1.6 && <1.7
                     , silently >=1.2 && <2.0
